         of rzxdump if libgcrypt is present (bug #3582043) (Sergio).
20121127 compat/amiga/Makefile.am,compat/unix/Makefile.am,fmfconv.[ch],
         fmfconv_aiff.c,fmfconv_au.c,fmfconv_ff.c,fmfconv_ppm.c,fmfconv_scr.c,
         fmfconv_wav.c,fmfconv_yuv.c,movie_tables.h,profile2map.c: update FSF 
         address in GPL notices, change Phil e-mail address to @shadowmagic and 
         remove postal address, fix harcoded Id tags, and add missing properties
         (Sergio).
20121127 audio2tape.h,compat/amiga/Makefile.am,compat/unix/Makefile.am,
         fmfconv.[ch],fmfconv_aiff.c,fmfconv_au.c,fmfconv_ff.c,fmfconv_ppm.c,
         fmfconv_scr.c,fmfconv_wav.c,fmfconv_yuv.c: fix hard-coded Id tags and
         add missing properties (Sergio).
20121201 configure.ac: fix the build when libaudiofile is not found and we are
         using an old pkg-config/autoconf. Don't interrupt COMPAT_OSNAME output
         with other checks (Sergio).
20121206 configure.ac: allow dynamic linking against system libraries for
         audio2tape on Windows to fix the build with libaudiofile 0.3 (Sergio).
20121208 fmfconv.c: preliminary support for 64-bits binaries for Windows (patch
         #3591613) (Sergio).
20121208 README: document support for reading PZX files (Sergio).
20121227 man/fuse-utils.1: mention fmfconv (Fred).
20121227 configure.ac: bump version number to 1.1.0 (Fred).
20121227 ChangeLog,README: first updates for a "1.1.0" release (Fred).
20121228 man/fmfconv.1: add some more details on command line arguments (Fred).
20121228 fmfconv.c: tweak help text (Fred).
20121228 configure.ac: allow ffmpeg detection to use local-prefix (Fred).
20121229 man/*.1: fix quotes, dashes and spacing (Stuart).
20130106 fmfconv_au.c: improve addition of annotation field to au format files
         (thanks, Stuart Brady) (Alberto Garcia).
20130107 man/fmfconv.1: add some more details on command line arguments (Fred).