@@ -388,3 +388,4 @@
 20130106 fmfconv_au.c: improve addition of annotation field to au format files
          (thanks, Stuart Brady) (Alberto Garcia).
 20130107 man/fmfconv.1: add some more details on command line arguments (Fred).
+20130113 fmfconv_ff.c: migrate to ffmpeg 1.0.1 API (bug #272) (Fred and rkd77).
